# Cookbook

./: .gitignore  .travis.yml  README.md
.github/workflows/: DesktopCI.yml
Desktop/: Cargo.toml  Linux_Build.sh  Readme.md  Win_Build.sh
Desktop/cookbook/: Cargo.toml
Desktop/cookbook/src/: lib.rs
Desktop/cookbook/src/data/: categories.rs  cocktail.rs  meal.rs  mod.rs
Desktop/cookbook/src/data/drink/: alcoholic.rs  categories.rs  filtered.rs  glass.rs  id.rs  ingredient.rs  mod.rs  random.rs  search.rs
Desktop/cookbook/src/data/meal/: area.rs  categories.rs  filtered.rs  id.rs  ingredient.rs  mod.rs  random.rs  search.rs
Desktop/cookbook/src/dto/drink/: alcoholic_list.rs  categories_list.rs  filtered_list.rs  glass_list.rs  ingredient_list.rs  mod.rs  recipe.rs
Desktop/cookbook/src/dto/meal/: area_list.rs  categories_list.rs  filtered_list.rs  ingredient_list.rs  mod.rs  recipe.rs
Desktop/cookbook/src/models/: cocktail.rs  drink.rs  drink_recipe.rs  meal.rs  meal_recipe.rs  mod.rs  recipe.rs
Desktop/cookbook/src/models/drink/: alcoholic.rs  alcoholic_list.rs  categories.rs  categories_list.rs  filter.rs  glass.rs  glass_list.rs  ingredient.rs  ingredient_list.rs  mod.rs  recipe.rs
Desktop/cookbook/src/models/drink/api/: alcoholic.rs  categories.rs  ingredient.rs  mod.rs
Desktop/cookbook/src/models/meal/: area.rs  area_list.rs  categories.rs  categories_list.rs  filter.rs  ingredient.rs  mod.rs  recipe.rs
Desktop/cookbook/src/models/meal/api/: categories.rs  mod.rs
Desktop/firebase_handler/: Cargo.toml  sample_firebase-service-account.json  sample_securetoken.jwks  sample_service-account.jwks
Desktop/firebase_handler/src/: email_auth_handler.rs  facebook_auth_handler.rs  favorites.rs  google_auth_handler.rs  lib.rs  oauth.rs
Desktop/firebase_handler/src/dto/: drink.rs  meal.rs  mod.rs
Desktop/gui/: Cargo.toml  Cookbook.desktop
Desktop/gui/src/: field_set.rs  gui.rs  main.rs  main_window.rs  user.rs
Desktop/gui/src/gui_data/: mod.rs
Desktop/gui/src/gui_data/connections/: mod.rs  others.rs  random_meal.rs
Desktop/gui/src/gui_data/connections/buttons/: common.rs  favorite_button.rs  login_window.rs  mod.rs  previous_stack.rs  random_drink.rs  random_meal.rs
Desktop/gui/src/gui_data/connections/buttons/login_window/: login_window_buttons.rs  mod.rs
Desktop/gui/src/gui_data/connections/buttons/login_window/login_buttons/: email.rs  facebook.rs  google.rs  mod.rs
Desktop/gui/src/gui_data/connections/tree_selections/: drink.rs  favorites.rs  meal.rs  mod.rs  stack.rs
Desktop/gui/src/gui_data/login_window/: mod.rs  oauth_window.rs
Desktop/gui/src/gui_data/main_window/: buttons.rs  category_notebook.rs  images.rs  mod.rs  stack.rs  text.rs
Desktop/gui/ui/: Cookbook.glade  Main_Window.glade  Readme.md
Documentation/: Dokumentacja.tex
Web/: README.md  firebase.json  firestore.rules  package-lock.json  package.json
Web/cypress/integration/: favorite_test.js  login_test.js
Web/cypress/support/: index.js
Web/src/: App.vue  main.js
Web/src/assets/: main.css
Web/src/components/: AddToFavorites.vue  FavoritesList.vue  MealBar Copy2.vue  MealBar.vue  MealDetails.vue  MealList.vue  Navbar.vue  SearchByArea.vue  SearchByCategory.vue  SearchByIngredient.vue  SearchByName.vue
Web/src/firebase/: config.js
Web/src/router/: index.js
Web/src/tools/: getCollection.js  getDocument.js  getMeal.js  getUser.js  useCollection.js  useDocument.js  useLogin.js  useLogout.js  useSignup.js  useStorage.js
Web/src/views/: About.vue  Categories.vue  Home.vue  UserList.vue
Web/src/views/auth/: Login.vue  Signup.vue
