[package]
name = "cookbook"
version = "0.1.0"
authors = ["Maciej Karpiński"]
edition = "2018"
description = "Cookbook is project for ZMP in The Witelon State Univeristy of Applied Sciences in Legnica. cookbook crate is responsible for gathering information from TheMealDB - https://www.themealdb.com/api.php and TheCocktailDB API https://www.thecocktaildb.com/api.php"
repository = "https://github.com/MacKarp/Cookbook" 

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
reqwest = { version = "0.11.2", features = ["json","blocking"] }