[package]
name = "firebase_handler"
version = "0.1.0"
authors = ["Karpfly <karpfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookbook = { path = "../cookbook" }
firestore-db-and-auth = "0.6.1"
serde= "1.0.126"
serde_json = "1.0"
rand= "0.8.3"
chrono = "0.4.19"
reqwest = { version = "0.11.2", features = ["json","blocking"] }