[package]
name = "firebase_handler"
version = "0.1.0"
authors = ["Maciej Karpiński"]
edition = "2018"
description = "Cookbook is project for ZMP in The Witelon State Univeristy of Applied Sciences in Legnica. Firebase_handler crate is responsible for authenticating, reading and writing data to/from Google Firebase."
repository = "https://github.com/MacKarp/Cookbook" 

[dependencies]
cookbook = { path = "../cookbook" }
firestore-db-and-auth = "0.6.1"
serde= "1.0.126"
serde_json = "1.0"
rand= "0.8.3"
chrono = "0.4.19"
reqwest = { version = "0.11.2", features = ["json","blocking"] }