[package]
name = "gui"
version = "0.1.0"
authors = ["MacKarp"]
edition = "2018"
description = "GUI for Cookbook project" 
repository = "https://github.com/MacKarp/Cookbook" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
glib = "0.10.3"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24"]