[package]
name = "gui"
version = "0.1.0"
authors = ["MacKarp"]
edition = "2018"
description = "GUI for Cookbook project" 
repository = "https://github.com/MacKarp/Cookbook" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookbook = { path = "../cookbook" }
firebase_handler = {path = "../firebase_handler"}
gio = "0.9.1"
glib = "0.10.3"
reqwest = { version = "0.11.2", features = ["blocking"] }
gdk-pixbuf = "0.9.0"
rand ="0.8.3"
webkit2gtk = "0.11.0"
oauth2="4.0.0"
url= "2.2.2"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24"]