[package]
name = "gui"
version = "0.1.0"
authors = ["Maciej Karpiński"]
edition = "2018"
description = "Cookbook is project for ZMP in The Witelon State Univeristy of Applied Sciences in Legnica. GUI for project" 
repository = "https://github.com/MacKarp/Cookbook" 

[dependencies]
cookbook = { path = "../cookbook" }
firebase_handler = {path = "../firebase_handler"}
gio = "0.9.1"
glib = "0.10.3"
reqwest = { version = "0.11.2", features = ["blocking"] }
gdk-pixbuf = "0.9.0"
rand ="0.8.3"
oauth2="4.0.0"
url= "2.2.2"
open = "1.7.0"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24"]